--- a/src/components/Range/index.module.css
+++ b/src/components/Range/index.module.css
@@ -26,8 +26,14 @@
 }
 
 .range_block_slick {
-  max-width: 350px;
+  width: 100%;
   filter: drop-shadow(0px 4px 20px rgba(52, 70, 131, 0.1));
+}
+
+@media screen and (min-width: 480px) {
+  .range_block_slick {
+    max-width: 350px;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -51,12 +57,6 @@
 
 .range_block_price {
   margin: 24px 0px;
-}
-
-@media screen and (min-width: 319px) and (max-width: 320px) {
-  .range_block_price {
-    margin: 24px;
-  }
 }
 
 .range_block_price h2 {
